--- a/Resume.html
+++ b/Resume.html
@@ -49,14 +49,14 @@
 •	Motivated hard-working individual who has help users with Technical issues<br>
 •	Great customer service experience during the past years <br><br>
 	
-	<strong> <u>Education</u></strong> <br><br>
+	<strong> <u><b>Education</b></u></strong> <br><br>
 	Information Technologies Support Services<br>
 	Sheridan College Brampton, Ontario<br>
 	January 2019 – Present<br>
 	Expected Graduation date January 2021<br>
 	Grade Point Average 3.0 <br><br>
 	
-	<strong><u>Work Experience</u></strong><br><br>
+	<strong><u><i>Work Experience</i></u></strong><br><br>
 Line Cook/Dishwasher I Chucks Roadhouse I March 2019 – Present
 Mississauga<br>
 •	Prepare high-quality food, quickly and efficiently<br>
